# invoices-backend

./: .gitignore  LICENSE  README.md  app.py  embedding-test.py  pyproject.toml  requirements.txt  setup_vector_db.py  test_db.py
src/: main_agent.py  tools.py
src/utils/: paths.py  setup_vector_db.py
