[project]
name = "invoices-backend"
version = "0.1.0"
description = "Agente generador de facturas - backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents==0.2.3",
    "chromadb==1.0.20",
    "Flask==3.1.2",
    "flask_cors==6.0.1",
    "fpdf==1.7.2",
    "openai==1.101.0",
    "pydantic==2.11.7",
    "python-dotenv==1.1.1",
    "qrcode==8.2",
    "sentence_transformers==5.1.0",
    "Werkzeug==3.1.3",
]
